kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect7/025_weaving_in_kermeta_aspect7.kmt
package weavinginvalidtest7;

require kermeta

using kermeta::standard

class A {


}

class B inherits A {}
class C inherits kermeta::kunit::Assert{

	reference a : A
	attribute b : B

}